--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <a-sky color="white"></a-sky>
 
   <a-entity id="water-sound"
-  sound="src: watersound.mp3; autoplay: true; loop: false; volume: 1;"></a-entity>
+  sound="src: boilingwater.mp3; autoplay: true; loop: true; volume: 1;"></a-entity>
 
     <!--instructions-->
     <a-entity>
