--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <script src="https://aframe.io/releases/0.2.0/aframe.min.js"></script>
   <script src="bundle.js"></script>
-  <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.4.min.js"></script>
   <script src="https://rawgit.com/ngokevin/aframe-layout-component/master/dist/aframe-layout-component.min.js"></script>
 
 </head>
