--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <a-entity id="scene1" visible="false">
     <a-sky color="#000000"></a-sky>
-    <a-entity mixin="sign-post" position="0 2 -3" rotation="0 -360 0"></a-entity>
+    <!--<a-entity mixin="sign-post" position="0 2 -3" rotation="0 -360 0"></a-entity>-->
   </a-entity>
 
 
@@ -53,7 +53,7 @@
     <a-entity>
       <a-curvedimage id="slide story" height="6" radius="6" theta-length="60" theta-start="-30"
                      scale="0.8 0.8 0.8" src="slides/boilingfrogstory.png" visible="true">
-        <a-animation attribute="visible" begin="15000" to="false"></a-animation>
+        <a-animation attribute="visible" begin="17000" to="false"></a-animation>
       </a-curvedimage>
     </a-entity>
 
@@ -62,13 +62,17 @@
     <a-entity id="instructions">
       <a-curvedimage id="slide" height="6" radius="6" theta-length="60" theta-start="-30"
                      scale="0.8 0.8 0.8" src="slides/instructions.png" visible="false">
-        <a-animation attribute="visible" begin="15100" to="true"></a-animation>
+        <a-animation attribute="visible" begin="17100" to="true"></a-animation>
       </a-curvedimage>
     </a-entity>
 
     <!--top of pot-->
-    <a-plane src="slides/silver.png" position="0 2.4 0" height="11" width="11" rotation="90 90 0"
-             material="roughness: 1; metalness: 1"></a-plane>
+    <a-plane src="slides/circle.png" position="0 2.4 0" height="11" width="11" rotation="90 90 0"
+             material="roughness: 1; metalness: 1">
+
+      <a-animation attribute="position" from="0 20 0" to="0 2.4 0" dur="10000"
+                   begin="0"></a-animation>
+    </a-plane>
 
     <!--water-->
     <a-ocean width="10" depth="10" density="1" opacity="1" position="0 -2 0"
@@ -139,63 +143,63 @@
                    rotation="0 100 0" scale="0.8 0.8 0.8" position="0 0 0" metalness="1" roughness="1"></a-curvedimage>
 
     <!--slides-->
-    <a-curvedimage id=" slide-1" class="slide" height="6" radius="6" theta-length="30" theta-start="0"
+    <a-curvedimage id=" slide-1" class="slide" height="6" radius="6" theta-length="40" theta-start="360"
                    scale="0.8 0.8 0.8" src="slides/hansen.jpg" visible="false" material="metalness: 1">
       <a-animation attribute="visible" begin="25000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-2" height="6" radius="6" theta-length="30" theta-start="30"
-                   scale="0.8 0.8 0.8" src="slides/flood.jpg" visible="false">
+    <a-curvedimage id="slide slide-2" height="6" radius="6" theta-length="40" theta-start="330"
+                   scale="0.8 0.8 0.8" src="slides/graph.jpg" visible="false">
       <a-animation attribute="visible" begin="33000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-3" height="6" radius="6" theta-length="30" theta-start="60"
-                   scale="0.8 0.8 0.8" src="slides/climateactivism.jpg" visible="false">
+    <a-curvedimage id="slide slide-3" height="6" radius="6" theta-length="40" theta-start="300"
+                   scale="0.8 0.8 0.8" src="slides/pollution.jpg" visible="false">
       <a-animation attribute="visible" begin="41000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-4" height="6" radius="6" theta-length="30" theta-start="90"
+    <a-curvedimage id="slide slide-4" height="6" radius="6" theta-length="40" theta-start="270"
                    scale="0.8 0.8 0.8" src="slides/algore.jpg" visible="false">
       <a-animation attribute="visible" begin="49000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-5" height="6" radius="6" theta-length="30" theta-start="120"
+    <a-curvedimage id="slide slide-5" height="6" radius="6" theta-length="40" theta-start="240"
                    scale="0.8 0.8 0.8" src="slides/paristalks.jpg" visible="false">
       <a-animation attribute="visible" begin="57000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-6" height="6" radius="6" theta-length="30" theta-start="150"
+    <a-curvedimage id="slide slide-6" height="6" radius="6" theta-length="40" theta-start="210"
                    scale="0.8 0.8 0.8" src="slides/meltingice.jpeg" visible="false">
       <a-animation attribute="visible" begin="65000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-7" height="6" radius="6" theta-length="30" theta-start="180"
+    <a-curvedimage id="slide slide-7" height="6" radius="6" theta-length="40" theta-start="180"
                    scale="0.8 0.8 0.8" src="slides/drought.jpg" visible="false">
       <a-animation attribute="visible" begin="73000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-8" height="6" radius="6" theta-length="30" theta-start="210"
+    <a-curvedimage id="slide slide-8" height="6" radius="6" theta-length="40" theta-start="150"
                    scale="0.8 0.8 0.8" src="slides/climaterefugees.jpg" visible="false">
       <a-animation attribute="visible" begin="81000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-9" height="6" radius="6" theta-length="30" theta-start="240"
-                   scale="0.8 0.8 0.8" src="slides/exxonknew.jpg" visible="false">
+    <a-curvedimage id="slide slide-9" height="6" radius="6" theta-length="40" theta-start="120"
+                   scale="0.8 0.8 0.8" src="slides/jamesinhofe.jpg" visible="false">
       <a-animation attribute="visible" begin="89000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-10" height="6" radius="6" theta-length="30" theta-start="270"
-                   scale="0.8 0.8 0.8" src="slides/jamesinhofe.jpg" visible="false">
+    <a-curvedimage id="slide slide-10" height="6" radius="6" theta-length="40" theta-start="90"
+                   scale="0.8 0.8 0.8" src="slides/fire.jpg" visible="false">
       <a-animation attribute="visible" begin="94000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-11" height="6" radius="6" theta-length="30" theta-start="300"
+    <a-curvedimage id="slide slide-11" height="6" radius="6" theta-length="40" theta-start="60"
                    scale="0.8 0.8 0.8" src="slides/nytimes.png" visible="false">
       <a-animation attribute="visible" begin="97000" to="true"></a-animation>
     </a-curvedimage>
 
-    <a-curvedimage id="slide slide-12" height="6" radius="6" theta-length="30" theta-start="330"
-                   scale="0.8 0.8 0.8" src="slides/fire.jpg" visible="false">
+    <a-curvedimage id="slide slide-12" height="6" radius="6" theta-length="40" theta-start="30"
+                   scale="0.8 0.8 0.8" src="slides/shanghai.png" visible="false">
       <a-animation attribute="visible" begin="100000" to="true"></a-animation>
     </a-curvedimage>
 
